--- a/Wepcerpbis/Wepcerpbis.csproj
+++ b/Wepcerpbis/Wepcerpbis.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cliente.cs" />
+    <Compile Include="entrada.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
